samples/_failures_safe/1761321957_f11310_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b767f35.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_1b767f35.c:159:9: error: expected declaration or statement at end of input
  159 |         case TOKEN_ERROR:
      |         ^~~~
./samples/SAFE/__tmp_1b767f35.c:159:9: error: expected declaration or statement at end of input
